@@ -42,7 +42,11 @@ Content-type: text/xml
       <swe:field name="bands">
         <swe:Quantity>
           <swe:description>Test description</swe:description>
-          <swe:nilValues/>
+          <swe:nilValues>
+            <swe:NilValues>
+              <swe:nilValue reason="">-99</swe:nilValue>
+            </swe:NilValues>
+          </swe:nilValues>
           <swe:uom code="W.m-2.Sr-1"/>
           <swe:constraint>
             <swe:AllowedValues>
